--- a/Workshop/project/softuni-forum/src/app/user/login/login.component.html
+++ b/Workshop/project/softuni-forum/src/app/user/login/login.component.html
@@ -6,18 +6,18 @@
 
             <p class="field field-icon">
                 <label for="email"><span><fa-icon class="fa" [icon]="faEnvelope"></fa-icon></span></label>
-                <input class="input-error" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
+                <input #emailInput class="input-error" type="email" name="email" id="email" placeholder="john.doe@gmail.com">
             </p>
-            <p class="error">
+            <!-- <p class="error">
                 Email is required!
-            </p>
+            </p> -->
             <!-- <p class="error">
                 Email is not valid!
             </p> -->
 
             <p class="field field-icon">
                 <label for="password"><span><fa-icon class="fa" [icon]="faLock"></fa-icon></span></label>
-                <input type="password" name="password" id="password" placeholder="******">
+                <input #passwordInput type="password" name="password" id="password" placeholder="******">
             </p>
             <!-- <p class="error">
                 Password is required!
@@ -26,7 +26,7 @@
                 Password must be at least 4 characters!
             </p> -->
 
-            <button disabled>Login</button>
+            <button (click)="login(emailInput.value, passwordInput.value)">Login</button>
 
             <p class="text-center">
                 Have an account?
