--- a/Workshop/project/softuni-forum/src/app/user/register/register.component.html
+++ b/Workshop/project/softuni-forum/src/app/user/register/register.component.html
@@ -9,9 +9,9 @@
                 <label for="username"><span><fa-icon class="fa" [icon]="faUser"></fa-icon></span></label>
                 <input class="input-error" type="text" name="username" id="username" placeholder="Johny">
             </p>
-            <p class="error">
+            <!-- <p class="error">
                 Username is required!
-            </p>
+            </p> -->
 
             <!-- email -->
             <p class="field field-icon">
