--- a/Workshop/project/softuni-forum/src/app/theme/themes/themes.component.html
+++ b/Workshop/project/softuni-forum/src/app/theme/themes/themes.component.html
@@ -1,25 +1,32 @@
-<div class="theme-title" *ngIf="posts">
-    <div class="theme-container" *ngFor="let post of posts">
-        <div class="theme-name-wrapper">
-            <div class="theme-name">
-                <a href="#" class="normal">
-                    <h2>{{post.themeId.themeName}}</h2>
-                </a>
-                <div class="columns">
-                    <div>
-                        <p>Date: <time>{{post.created_at}}</time></p>
-                        <div class="nick-name">
-                            <p>Username: <span>{{post.userId.username}}</span></p>
+<div class="mainContainer">
+    <div class="theme-title" *ngIf="posts">
+        <div class="theme-container" *ngFor="let post of posts">
+            <div class="theme-name-wrapper" >
+                <div class="theme-name">
+                    <a [routerLink]="['/themes', post.themeId._id]" class="normal">
+                        <h2>{{post.themeId.themeName}}</h2>
+                    </a>
+                    <div class="columns">
+                        <div>
+                            <p>Date: <time>{{post.created_at}}</time></p>
+                            <div class="nick-name">
+                                <p>Username: <span>{{post.userId.username}}</span></p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="subscribers">
-                        <!-- <button class="subscribe">Subscribe</button> -->
-                        <p>Subscribers: <span>{{post.themeId.subscribers.length}}</span></p>
+                        <div class="subscribers">
+                            <!-- <button class="subscribe">Subscribe</button> -->
+                            <p>Subscribers: <span>{{post.themeId.subscribers.length}}</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
+    
+    <div *ngIf="!posts">Loading...</div>
+    
+    <div class="container">
+      <app-side [items]="recentPosts"></app-side>
+    </div>
 </div>
-
-<div *ngIf="!posts">Loading...</div>
