--- a/05.Forms/forms/src/app/app.component.html
+++ b/05.Forms/forms/src/app/app.component.html
@@ -1,1 +1,2 @@
-  <app-directives-demo></app-directives-demo>
+  <!-- <app-directives-demo></app-directives-demo> -->
+  <app-templates-forms-demo></app-templates-forms-demo>
