--- a/05.Forms/forms/src/app/templates-forms-demo/templates-forms-demo.component.html
+++ b/05.Forms/forms/src/app/templates-forms-demo/templates-forms-demo.component.html
@@ -3,13 +3,24 @@
     <form #laptopForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="processor">Proccessor</label>
-        <input name="proccessor" ngModel type="text" class="form-control" id="processor" 
-        required>
+        <input minlength="5" #proccessor="ngModel" name="proccessor" ngModel type="text" class="form-control" id="processor" 
+        required [attr.aria-invalid]="proccessor.invalid">
+       <ng-container *ngIf="proccessor.touched && proccessor.invalid">
+        <div class="alert alert-danger" *ngIf="proccessor.errors?.['required']">
+          Proccessor is required!
+        </div>
+        <div class="alert alert-danger" *ngIf="proccessor.errors?.['minlength']">
+          Proccessor must be at least 5 characters long!
+        </div>
+       </ng-container>
       </div>
       <div class="form-group">
         <label for="ram">RAM</label>
-        <input name="ram" ngModel type="text" class="form-control" id="ram" 
+        <input #ram="ngModel" name="ram" ngModel type="text" class="form-control" id="ram" 
         required>
+        <div class="alert alert-danger" *ngIf="ram.touched && ram.invalid">
+          RAM is required!
+        </div>
       </div>
       <div class="form-group">
         <label for="hardDisk">Hard Disk (GB)</label>
