--- a/Workshop/project/softuni-forum/src/app/core/header/header.component.html
+++ b/Workshop/project/softuni-forum/src/app/core/header/header.component.html
@@ -14,7 +14,7 @@
             </ul>
             <ul *ngIf="isLogged">
                 <li>
-                    <a routerLink="/profile">{{getFirstName}}'s profile</a>
+                    <a routerLink="/profile">{{getUsername}}'s profile</a>
                 </li>
                 <li>
                     <a (click)="logout()">Logout</a>
