--- a/Workshop/project/softuni-forum/src/app/user/profile/profile.component.html
+++ b/Workshop/project/softuni-forum/src/app/user/profile/profile.component.html
@@ -3,16 +3,16 @@
         <h3>User Info:</h3>
         <div class="flex">
             <p>Username: </p>
-            <p>Johny</p>
+            <p>{{user.username}}</p>
         </div>
         <div class="flex">
             <p>Email: </p>
-            <p>john.doe@gmail.com</p>
+            <p>{{user.email}}</p>
         </div>
         <div class="flex">
             <p>Phone: </p>
-            <p>+359 885 888 888</p>
+            <p>{{user.tel}}</p>
         </div>
-        <button class="edit-button">Edit</button>
+        <button (click)="editProfile()" class="edit-button">Edit</button>
     </div>
 </div>
